projects/compiler/test/typechecker/funcdecl/error_invalid_vararg_type.out
Error at %FILE_NAME%:1:11
Invalid type for vararg parameter
  |  func foo(*a: Int) {}
               ^
Vararg parameters must be an Array type, but got Int
